--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,5 +1,5 @@
 // Primary Colors //
-$white : #fff;
+$white: #fff;
 $offwhite: #eee;
 $lightergrey: #aaa;
 $lightgrey: #999; 
@@ -7,11 +7,11 @@ $grey: #666;
 $darkgrey: #414141;
 $darkergrey: #232323;
 $almostblack: #131313;
+$black: #000;
 
 // Project Based Colors //
 $orange: #f36a00; 
 $red: #ec3814; 
 $limegreen: #8dc63f;
 $blue: #0071BC;
-$pixbi: #00a8e0;
 $yellow: #ffda00;
