--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,10 +1,4 @@
-/*Khand + Ubuntu Webfont*/
-@import url('https://fonts.googleapis.com/css?family=Khand:300,400,500,600,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap');
-
-@font-face {
-	font-family: 'Khand', sans-serif;
-}
+@import url('//fonts.googleapis.com/css?family=Ubuntu:300,500,700&display=swap');
 
 @font-face {
 	font-family: 'Ubuntu', sans-serif;
