--- a/components/common/typography/text/Text.scss
+++ b/components/common/typography/text/Text.scss
@@ -105,22 +105,22 @@
 	font-size: 2rem;
 }
 
-.header-1 {
+.heading-1 {
 	font-size: 2.4rem;
 }
 
-.header-2 {
+.heading-2 {
 	font-size: 2rem;
 }
 
-.header-3 {
+.heading-3 {
 	font-size: 1.8rem;
 }
 
-.header-4 {
+.heading-4 {
 	font-size: 1.4rem;
 }
 
-.header-5 {
+.heading-5 {
 	font-size: 1rem;
 }
