--- a/components/ui/slideshow/slidecard/SlideCard.scss
+++ b/components/ui/slideshow/slidecard/SlideCard.scss
@@ -28,14 +28,17 @@
 
     .category {
     	display: block;
-    	font-size: 14px;
+    	font-size: 10px;
+    	letter-spacing: 1px;
     	margin-bottom: 10px;
     	text-decoration: none;
+    	text-transform: uppercase;
     }
 
     .headline {
     	display: block;
     	text-decoration: none;
+    	text-transform: capitalize;
     	font-size: 20px;
     	overflow: hidden;
 		text-overflow: ellipsis;
@@ -46,10 +49,11 @@
 }
 
 .grid {
+	background-color: rgba(white, .5);
+	backdrop-filter: blur(.5rem);
 	max-width: 50%;
 	width: 100%;
 	padding: 3rem 2rem;
-	background-color: rgba(white, .5);
-	backdrop-filter: blur(.5rem);
 	text-align: center;
+	border-radius: 10px;
 }
