--- a/components/ui/slideshow/Slideshow.scss
+++ b/components/ui/slideshow/Slideshow.scss
@@ -33,8 +33,8 @@
 	    	left: 0;
 	    	width: 100%;
 	    	height: 100%;
-	    	background: url('./static/arrow.svg') no-repeat center center white;
-	    	background-size: 50%;
+	    	background: url('https://www.flaticon.com/svg/static/icons/svg/50/50621.svg') no-repeat center center white;
+	    	background-size: 40%;
 	    }
 
 	    &:focus {
